--- a/TODO.txt
+++ b/TODO.txt
@@ -4,22 +4,25 @@ TODO Obecne
 
 
 Generator
-- Vypnout vytup pokud generator nebezi
-- dodelat sweep
+- OK Vypnout vytup pokud generator nebezi
+- dodelat sweep                                                                                                    
+- OK upravit load formular pro arb generovani aby bylo schopne brat primo data z osciloskopu (zeptat se na preskoceni prvniho radku + preskoceni prvniho sloupce)
 
 Scope
 - prepinani rozsahu (ukladani do flash)
 - nastavit dobu odberu vzorku podle vzorkovaci frekvence  (done on F3-disco)
 - dodelat tralcitko max vzorkovaci frekvence  (done on F3-disco)
+- dodelat volbu kanalu ADC a pinu
 
 
 Aplikace
 - generator nastaveni duty meni oba parametry   (Nepodarilo se reprodukovat)
-- zoom zed graph prenest na trackbar
+- zobrazovat com port v nazvu okna
 
 
 
 Obecne
+OK - Bug - generator kanal 2 generuje i kdyz neni zapnut (vypnout DMA)
 Bug 00d - aplikace nezobrazuje posledni cislo nazvu pinu (f303 discovery je napsano PB1 misto PB12)
 Bug 00c - pokud se zmeni vzorkovani behem odesilani tak se spatne vypocita X osa 
 OK - Bug 00d - USB led by mela svitit i kdyz usb neni pripojeno (najit kde je pripojena - pravdepodobne to zpusobila zmena v gpio.c)
