1st release nucleo

--- a/PC_APP/InstruLab/InstruLab/Scope.resx
+++ b/PC_APP/InstruLab/InstruLab/Scope.resx
@@ -123,4 +123,81 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>53</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAVQBVh18P/4pjFf+FXAr/iGAR/4df
+        D/+GXQz/h18P/4dfD/+MZRj/j2of/49qH/+Pah//j2of/45oHP+KYxX/jGYZ/49qH/+Pah//jWYa/4li
+        E/+MZRj/jWcc1QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIZdDaeAVQD/glgE/4FX
+        A/+BVwP/glgF/4VcC/+FXxL/e1cQ/3dXGf91Vxv/dVcb/3VXG/91Vxv/dFYZ/3NUF/9yVBb/eFgb/4Fg
+        Hv+MaCD/kGog/41nG/+NZxp8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAVQAFkGog74FW
+        Av+AVQD/gFUA/4BVAP+AVQD/hV0O/3VTD/9WPQr/RDMP/z8vDv8/Lw7/Py8O/z8vDv8/Lw7/Pi0M/z0r
+        Cf9EMg7/XkYW/4FgHv+QayH/kGog/I5oHR0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIBV
+        AEGHXg7/j2of/4liE/+AVgH/gFUA/4NaB/+BXRL/Y0YN/zwsDP8nHQn/JBsI/yQbCP8kGwj/IxoH/yMZ
+        Bv8jGgf/IxoG/yYbBv9FMw//eFkb/5BrIf+QayHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAglcEkYBVAP+QayH/kGsh/4RbCf+EWwn/hFsJ/31YDv+pnpD/////////////////////////
+        ////////////////////////IxoG/z4tC/91Vxv/kGsh/49rIGUAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACCWQXeg1kG/4deDv+HXw//gVcD/4JYBP+HXw//fVgO/6iej///////////////
+        //////////////////////////////////8nHQn/QzEM/3dYGv+QayH1imQWDAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAimIUMIlhEv+JYhP/i2QW/4deDv+CWAT/gFUA/4dfD/99WA7/qqCR////
+        /////////////////////////////////////////////0UzEP9cQxL/gF0Z/5BrIaoAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACHXw+AhV4S/4BeG/94WRv/akkG/2pHAf94Uwv/glsN/31Z
+        D/+pn5D/////////////////o6Ge/y4hCP9OOhL/bFAZ/3VXG/91Vxv/eFkb/35cFv+LZx7/j2ofTQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIJcDMxwTAP/VTwI/0IvCv86KAT/QCwF/1Y9
+        C/9zUQ7/fFgS/6mgkf////////////////+joZ3/MSQJ/1lBD/+DYRz/kGsh/5BqIP+MZRj/jWcb/5Bs
+        IuiAVQADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACOaB0dhGAY/mRIEf86Kgr/JRoF/yIY
+        Bf8kGQP/NiYE/15CCv93VRP/qqGS/////////////////6Ognf8yJAr/WkER/4FdGP+MZhn/jGYZ/45o
+        HP+QayH/kGwilAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIFXA2iAXBP/qZ+Q////
+        /////////////6Kgnf8tHgD/VTsH/3ZWFf+qoZL/////////////////o6Ge/zIlDP9cRBX/hGIe/49p
+        Hv+QaiD/kGog/4tkF/+PaR4zAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhFwKt4Bb
+        E/+nnY//////////////////o6Cd/zAjB/9ZQRD/d1YW/6qgkf////////////////+joZ3/MiUL/1xE
+        Ff+EYh7/kGsh/5BrIf+OaB3/imIU0wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIpj
+        FQ2KYxX5d1AC/6mekP////////////////+joZ3/MCIH/1lBEP92VBP/qqCR/////////////////6Kg
+        nf8xJAn/XEQV/4RiHv+Pah//jWcb/41nG/+LZBd6AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAi2MWWIRaCP94UQT/qJ6P/////////////////6Kgnf8tHgD/VjsI/3RSD/+pn5D/////////
+        ////////o6Gd/zIlDP9cRBX/hGIe/45oHf+KYxX/i2QX/I5oHR0AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACGXQ2jjGUY/35ZEP+onY//////////////////oqCc/y4fAv9UOQT/clEN/6id
+        j/////////////////+joJ3/MCMH/1lAD/+BXhn/jWYa/4tkF/+QayHAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAgFUAA4BWAe2FXAr/fVcN/6mekP////////////////+ioJ3/LyIG/1U7
+        Bv9vTAb/ppyN/////////////////6Kgnf8vIQX/VTsH/3pWDP+IYBD/iGAR/4piFWIAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAVQA/gFUA/4BVAP97VQr/qJ6P/////////////////6Kg
+        nf8vIAT/WD8N/3NRDv+ono//////////////////oqCd/y8hBf9YPgz/e1cO/4RbCf+GXw70imQWDAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIBVAIyCWAX/iWES/35ZD/+onY//////////
+        ////////oqCd/y8hBf9UOgX/cEwG/6edjv////////////////+ioJz/Lh8D/1lADv98WA//h14O/4hg
+        EaYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhV0L3YhgEf+EWgj/dlAB/6ie
+        j/////////////////+joJ3/MSMI/1Q6BP9tSQP/p52O/////////////////6KgnP8tHgD/VjwJ/31Z
+        EP+JYRL/iWETSQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIliFC2LZBb/hFsJ/4BV
+        AP95Ugb/qJ6P/////////////////6KgnP8uHwP/VDoE/3FOCf+nnY7/////////////////oqCc/y0e
+        AP9SNgD/eFIG/4piFOeAVQACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAhVwLe4li
+        E/+JYhP/i2QX/3xXDP+ono//////////////////oqCc/zIlC/9YPw3/b0wG/6iej///////////////
+        //+ioJz/LR4A/1I2AP91TgD/glcEiwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AACGXg7KiGAQ/4deDv+JYRL/fFYL/6iej/////////////////+ioJ3/MiUM/1Y9Cv9wTAX/rqOS////
+        /////////////6Ohnf84KAj/XkEK/3tUB/+AVQAuAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAhV0LGYliE/2HXg7/hFoI/4JYBf9+WRD/qJ6P/////////////////6KgnP8uIAT/UjYA/3ZQ
+        Bf+1p5H/////////////////qqWd/1U7CP9yUA3/hmAV1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACEWwlmiWIT/4ZeDf+LZBf/hl4N/35ZD/+pnpD/////////////////oqCc/y4g
+        A/9SNgD/dU4A/35WBf93UQf/clEQ/2hFAP9qRwD/eVQN/4JaDP9/VgN2AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAIRaCbaKYxX/gFUA/4BVAP+HXg7/flkQ/6iej///////////////
+        //+joZ7/MiUM/1I2AP9+WhL/jGUY/4RaCP+LZBf/glgE/4BVAP+FXAv/iGAQ/IBVABkAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABqRwAMhFoI94RbCP+CVwT/imMV/4RbCf98Vgv/qJ2P////
+        /////////////6Kgnf8wIwf/UjcB/4RiHv+QayH/gFUA/4BVAP+AVQD/hFoI/4hgEf+FXAu6AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHdPAFaGXQz/g1oH/4JYBf+JYRL/hFsJ/3tU
+        CP+nnI7/////////////////oqCc/y4gA/9VOgb/eFEF/4VbCf+AVQD/gFUA/4BVAP+BVwP/hVwL/4Zd
+        DV8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAflUDo4VcCv+EWwj/gFUA/4BV
+        AP+FXAv/gVoO/6qfjv////////////////+joJz/NSMA/1xAB/93TwD/gFUA/4BVAP+AVQD/gFUA/4Zd
+        DP+IYRH0gFUACwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIBVAAKCVwPqglgF/4NZ
+        Bv+BVgL/gFUA/4ZdDP+GXhD/sqOO/////////////////6qknP9RNgD/bkoE/4FZCv+BVgH/gFUA/4BV
+        AP+AVQD/gVYC/4BYBqcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdk4AQYBV
+        AP+LZBb/g1kG/4RaB/+BVgH/g1kG/4deDf98UwH/dU8E/2pHAP9oRQD/b00J/35bFv+BWAn/gVgE/4Zd
+        DP+HXg3/hFsJ/4NYBf+IYBD/gloNSgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAB8UwCOgFUA/4FWAv+AVQD/glgE/4NZBv+AVQD/gFUA/4FXA/+FXAv/gFUB/4BVAP+HXg3/kGsh/4Rb
+        CP+AVQD/jGUY/5BrIf+DWQf/gVcD/4RaCeaAVQACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAIliFNqHXw//g1kG/4FWAv+AVQD/hVwK/4JXBP+AVQD/glcE/4deDv+DWQb/hFoH/4Ra
+        B/+GXAv/hFoI/4FXAv+HXw//jmgc/4FWAv+AVQD/hl4OjwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/4AAAP+AAAD/AAAA/wAAAf8AAAH/AAAB/gAAA/4AAAP+AAAD/AAAB/wA
+        AAf8AAAP+AAAD/gAAA/4AAAf8AAAH/AAAB/wAAA/8AAAP+AAAD/gAAB/4AAAf8AAAP/AAAD/wAAA/4AA
+        Af+AAAH/gAAB/wAAA/8AAAP/AAAD/wAAB/8=
+</value>
+  </data>
 </root>
