--- a/PC_APP/InstruLab/InstruLab/Properties/Resources.resx
+++ b/PC_APP/InstruLab/InstruLab/Properties/Resources.resx
@@ -118,4 +118,34 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="edge_asc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edge_asc.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="edge_desc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edge_desc.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ab_rising_rising" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ab_rising_rising.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ab_falling_falling" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ab_falling_falling.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ab_falling_rising" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ab_falling_rising.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ab_rising_falling" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ab_rising_falling.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ba_falling_falling" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ba_falling_falling.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ba_falling_rising" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ba_falling_rising.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ba_rising_falling" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ba_rising_falling.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ba_rising_rising" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ba_rising_rising.wmf;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
