new year vesrion

--- a/PC_APP/InstruLab/InstruLab/SyncPwmGenerator.resx
+++ b/PC_APP/InstruLab/InstruLab/SyncPwmGenerator.resx
@@ -120,4 +120,100 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAAAIABoBAAAJgAAACAgAAAAACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAAEAE
+        AAAAAAAAAAAAAAAAAAAAAAAA////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wG7cQD/u3EA/7txAP+7cQD/u3EAf7tx
+        AP+7cQD/u3EA/7txAP+7cQBLu3EA/7txAP+7cQD/u3EA/7txAP+7cQC/u3EA/////wH///8B////Abtx
+        AH+7cQCBu3EABbtxAAX///8Bu3EAibtxAH////8B////Af///wH///8Bu3EA/7txAP////8B////Af//
+        /wG7cQB/u3EAx7txAH+7cQBB////AbtxAIO7cQB/////Af///wH///8B////AbtxAP+7cQD/////Af//
+        /wH///8Bu3EAf7txAMG7cQB/u3EAf7txAH+7cQCBu3EAf////wH///8B////Af///wG7cQD/u3EAf///
+        /wH///8B////AbtxAEG7cQB/u3EAf7txAH+7cQB/u3EAg7txAH////8B////Af///wH///8Bu3EA////
+        /wH///8B////Af///wH///8B////Af///wH///8B////AbtxAEG7cQD/u3EA/7txAP+7cQD/u3EA/7tx
+        AL////8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////AQAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA
+        //8AAP//AAD//wAA//8AAP//AAD//wAA//8oAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAA////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wG7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA////
+        /wG7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP////8Bu3EAKbtxAP+7cQD/u3EA/7tx
+        AP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/////AbtxAP+7cQD/u3EA/7txAP+7cQD/u3EA/7tx
+        AP+7cQD/////AbtxAP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA/////wG7cQD/u3EA/7tx
+        AP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP////8B////Af//
+        /wH///8B////Af///wH///8Bu3EA/7txAP////8B////Af///wH///8B////Af///wH///8Bu3EAG7tx
+        AP+7cQD/////Af///wH///8B////Af///wH///8B////Af///wH///8Bu3EA/7txAP+7cQD/u3EA////
+        /wH///8B////Af///wH///8B////Af///wG7cQD/u3EA/7txAAe7cQAHu3EACbtxABP///8B////Af//
+        /wG7cQAPu3EA/7txAP////8B////Af///wH///8B////Af///wH///8B////Af///wG7cQD/u3EA/7tx
+        AP+7cQD/////Af///wH///8B////Af///wH///8B////AbtxAP+7cQD/u3EA/7txAP+7cQD/u3EA////
+        /wH///8B////AbtxAAu7cQD/u3EA/////wH///8B////Af///wH///8B////Af///wH///8B////Abtx
+        AP+7cQD/u3EA/7txAP////8B////Af///wH///8B////Af///wH///8Bu3EA/7txAP+7cQAf////Af//
+        /wH///8B////Af///wH///8Bu3EAA7txAP+7cQD/////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8Bu3EA/7txAP+7cQD/u3EA/////wH///8B////Af///wH///8B////Af///wG7cQD/u3EA/7tx
+        AAv///8B////Af///wH///8B////Af///wG7cQADu3EA/7txAP////8B////Af///wH///8B////Af//
+        /wH///8B////Af///wG7cQD/u3EA/7txAP+7cQD/////Af///wH///8B////Af///wH///8B////Abtx
+        AP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAAO7cQD/u3EA/////wH///8B////Af//
+        /wH///8B////Af///wH///8B////AbtxAP+7cQD/u3EA/7txAP+7cQAF////Af///wH///8B////Af//
+        /wH///8Bu3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EAA7txAP+7cQD/////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8Bu3EA/7txAP////8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wG7cQALu3EA/7tx
+        AP////8B////Af///wH///8B////Af///wH///8B////Af///wG7cQD/u3EA/////wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wG7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wG7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA/7txAP+7cQD/u3EA////
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+</value>
+  </data>
 </root>
